--- a/haskell/haskell.cabal
+++ b/haskell/haskell.cabal
@@ -14,7 +14,7 @@ cabal-version:       >=2.0
 extra-source-files:  README.md
 
 library
-  exposed-modules:     Day1
+  exposed-modules:     Day1 Day2
   default-language:    Haskell2010
   build-depends:       base ^>=4.14.2.0,
                        raw-strings-qq ^>=1.1,
